marky keyboard (button)

--- a/index.html
+++ b/index.html
@@ -11,102 +11,102 @@
                   <div class="glav-keyboard">
                         <div class="company">KeyBoards Marky</div>
                         <div class="keyboard-1">
-                              <div class="keyboard">esc</div>
-                              <div class="keyboard">f1</div>
-                              <div class="keyboard">f2</div>
-                              <div class="keyboard">f3</div>
-                              <div class="keyboard">f4</div>
-                              <div class="keyboard">f5</div>
-                              <div class="keyboard">f6</div>
-                              <div class="keyboard">f7</div>
-                              <div class="keyboard">f8</div>
-                              <div class="keyboard">f9</div>
-                              <div class="keyboard">f10</div>
-                              <div class="keyboard">f11</div>
-                              <div class="keyboard">f12</div>
-                              <div class="keyboard">hz</div>
+                              <button class="keyboard">esc</button>
+                              <button class="keyboard">f1</button>
+                              <button class="keyboard">f2</button>
+                              <button class="keyboard">f3</button>
+                              <button class="keyboard">f4</button>
+                              <button class="keyboard">f5</button>
+                              <button class="keyboard">f6</button>
+                              <button class="keyboard">f7</button>
+                              <button class="keyboard">f8</button>
+                              <button class="keyboard">f9</button>
+                              <button class="keyboard">f10</button>
+                              <button class="keyboard">f11</button>
+                              <button class="keyboard">f12</button>
+                              <button class="keyboard">⇐</button>
                         </div>
 
                         <div class="keyboard-2">
-                              <div class="keyboard">`</div>
-                              <div class="keyboard">1</div>
-                              <div class="keyboard">2</div>
-                              <div class="keyboard">3</div>
-                              <div class="keyboard">4</div>
-                              <div class="keyboard">5</div>
-                              <div class="keyboard">6</div>
-                              <div class="keyboard">7</div>
-                              <div class="keyboard">8</div>
-                              <div class="keyboard">9</div>
-                              <div class="keyboard">0</div>
-                              <div class="keyboard">-</div>
-                              <div class="keyboard">=</div>
-                              <div class="keyboard">del</div>
+                              <button class="keyboard">`</button>
+                              <button class="keyboard">1</button>
+                              <button class="keyboard">2</button>
+                              <button class="keyboard">3</button>
+                              <button class="keyboard">4</button>
+                              <button class="keyboard">5</button>
+                              <button class="keyboard">6</button>
+                              <button class="keyboard">7</button>
+                              <button class="keyboard">8</button>
+                              <button class="keyboard">9</button>
+                              <button class="keyboard">0</button>
+                              <button class="keyboard">-</button>
+                              <button class="keyboard">=</button>
+                              <button class="keyboard">del</button>
                         </div>
 
                         <div class="keyboard-2">
-                              <div class="keyboard tab">Tab</div>
-                              <div class="keyboard">q</div>
-                              <div class="keyboard">w</div>
-                              <div class="keyboard">e</div>
-                              <div class="keyboard">r</div>
-                              <div class="keyboard">t</div>
-                              <div class="keyboard">y</div>
-                              <div class="keyboard">u</div>
-                              <div class="keyboard">i</div>
-                              <div class="keyboard">o</div>
-                              <div class="keyboard">p</div>
-                              <div class="keyboard">[</div>
-                              <div class="keyboard">]</div>
-                              <div class="keyboard">\</div>
+                              <button class="keyboard tab">Tab</button>
+                              <button class="keyboard">q</button>
+                              <button class="keyboard">w</button>
+                              <button class="keyboard">e</button>
+                              <button class="keyboard">r</button>
+                              <button class="keyboard">t</button>
+                              <button class="keyboard">y</button>
+                              <button class="keyboard">u</button>
+                              <button class="keyboard">i</button>
+                              <button class="keyboard">o</button>
+                              <button class="keyboard">p</button>
+                              <button class="keyboard">[</button>
+                              <button class="keyboard">]</button>
+                              <button class="keyboard">\</button>
                         </div>
 
                         <div class="keyboard-2">
-                              <div class="keyboard caps">caps</div>
-                              <div class="keyboard">a</div>
-                              <div class="keyboard">s</div>
-                              <div class="keyboard">d</div>
-                              <div class="keyboard">f</div>
-                              <div class="keyboard">g</div>
-                              <div class="keyboard">h</div>
-                              <div class="keyboard">j</div>
-                              <div class="keyboard">k</div>
-                              <div class="keyboard">l</div>
-                              <div class="keyboard">:</div>
-                              <div class="keyboard">'</div>
-                              <div class="keyboard enter">Enter</div>
+                              <button class="keyboard caps">caps</button>
+                              <button class="keyboard">a</button>
+                              <button class="keyboard">s</button>
+                              <button class="keyboard">d</button>
+                              <button class="keyboard">f</button>
+                              <button class="keyboard">g</button>
+                              <button class="keyboard">h</button>
+                              <button class="keyboard">j</button>
+                              <button class="keyboard">k</button>
+                              <button class="keyboard">l</button>
+                              <button class="keyboard">:</button>
+                              <button class="keyboard">'</button>
+                              <button class="keyboard enter">Enter</button>
                         </div>
 
                         <div class="keyboard-2">
-                              <div class="keyboard shift">shift</div>
-                              <div class="keyboard">z</div>
-                              <div class="keyboard">x</div>
-                              <div class="keyboard">c</div>
-                              <div class="keyboard">v</div>
-                              <div class="keyboard">b</div>
-                              <div class="keyboard">n</div>
-                              <div class="keyboard">m</div>
-                              <div class="keyboard">,</div>
-                              <div class="keyboard">.</div>
-                              <div class="keyboard">/</div>
-                              <div class="keyboard shift">shift</div>
+                              <button class="keyboard shift">shift</button>
+                              <button class="keyboard">z</button>
+                              <button class="keyboard">x</button>
+                              <button class="keyboard">c</button>
+                              <button class="keyboard">v</button>
+                              <button class="keyboard">b</button>
+                              <button class="keyboard">n</button>
+                              <button class="keyboard">m</button>
+                              <button class="keyboard">,</button>
+                              <button class="keyboard">.</button>
+                              <button class="keyboard">/</button>
+                              <button class="keyboard shift">shift</button>
                         </div>
 
                         <div class="keyboard-2">
-                              <div class="keyboard">ctrl</div>
-                              <div class="keyboard">win</div>
-                              <div class="keyboard">alt</div>
-                              <div class="keyboard prob">—</div>
-                              <div class="keyboard">alt</div>
-                              <div class="keyboard">fn</div>
-                              <div class="keyboard listi">Ξ</div>
-                              <div class="keyboard">ctrl</div>
-                              <div class="keyboard">◄</div>
+                              <button class="keyboard">ctrl</button>
+                              <button class="keyboard">win</button>
+                              <button class="keyboard">alt</button>
+                              <button class="keyboard prob">—</button>
+                              <button class="keyboard">alt</button>
+                              <button class="keyboard">fn</button>
+                              <button class="keyboard listi">Ξ</button>
+                              <button class="keyboard">ctrl</button>
+                              <button class="keyboard">◄</button>
                               <div class="st">
-                                    <div class="keyboard st">▲</div>
-                                    <div class="keyboard st">▼</div>
+                                    <button class="keyboard st">▲</button>
+                                    <button class="keyboard st">▼</button>
                               </div>
-                              <div class="keyboard">►</div>
+                              <button class="keyboard">►</button>
                         </div>
                   </div>
             </div>
