--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
-      <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Marky | FutFusion</title>
 </head>
 
 <body>
-      <main class="main">
-            
-      </main>
+    <header class="header">
+        <div class="fitfusion" data-fitfusion="Fit" data-fitfusion-1="Fusion"></div>
+        <button class="home">Home</dibuttonv>
+            <button class="workouts">Workouts</button>
+            <button class="diets">Diets</button>
+            <button class="faq">FAQ</button>
+            <button class="signin">Sign in</button>
+            <button class="register">Register</button>
+    </header>
+
+    <main class="main">
+        <h3 class="a_new_era">A New Era of</h3>
+        <h3 class="a_new_era">Fitness Standards</h3>
+
+        <p class="dop_text">Conventional diets don’t work. Discover</p>
+        <p class="dop_text_2">the FitFusion methodology to fat loss.</p>
+
+        <button class="button1 losefat">Lose Fat</button>
+        <button class="button1 Howitworks">How it works</button>
+
+        <aside class="aside">
+            <div class="image">
+                <img src="images/futfusion.png" class="imagefut">
+            </div>
+
+        </aside>
+
+    </main>
+
+
 </body>
 
 </html>
