--- a/index.html
+++ b/index.html
@@ -9,34 +9,51 @@
 
 <body>
     <header class="header">
-        <div class="fitfusion" data-fitfusion="Fit" data-fitfusion-1="Fusion"></div>
-        <button class="home">Home</dibuttonv>
-            <button class="workouts">Workouts</button>
-            <button class="diets">Diets</button>
-            <button class="faq">FAQ</button>
-            <button class="signin">Sign in</button>
-            <button class="register">Register</button>
+
+        <div class="logo">
+            <span>Fit</span>
+            <span>Fusion</span>
+        </div>
+
+        <nav class="header__menu">
+            <a href="">Home</a>
+            <a href="">Workouts</a>
+            <a href="">Diets</a>
+            <a href="">FAQ</a>
+        </nav>
+
+        <div class="header_right">
+            <button class="button --light singin">Sing in</button>
+            <button class="button --line reg">Register</button>
+        </div>
+
     </header>
 
     <main class="main">
-        <h3 class="a_new_era">A New Era of</h3>
-        <h3 class="a_new_era">Fitness Standards</h3>
 
-        <p class="dop_text">Conventional diets don’t work. Discover</p>
-        <p class="dop_text_2">the FitFusion methodology to fat loss.</p>
+        <div class="main__left">
+            <h3 class="title">A New Era of
+                <br />
+                Fitness Standards
+            </h3>
 
-        <button class="button1 losefat">Lose Fat</button>
-        <button class="button1 Howitworks">How it works</button>
+            <p class="text">
+                Conventional diets don’t work. Discover
+                <br />
+                the FitFusion methodology to fat loss.
+            </p>
+
+            <div class="buttons">
+                <button class="button">Lose Fat</button>
+                <button class="button --line howit">How it works</button>
+            </div>
+        </div>
 
         <aside class="aside">
-            <div class="image">
-                <img src="images/futfusion.png" class="imagefut">
-            </div>
-
+            <img src="images/futfusion.png">
         </aside>
 
     </main>
-
 
 </body>
 
