--- a/index.html
+++ b/index.html
@@ -10,42 +10,57 @@
 <body>
     <header class="header">
 
-        <div class="logo">
-            <span>Fit</span>
-            <span>Fusion</span>
+        <div class="logo_container">
+
+            <div class="logo">
+                <span>Fit</span>
+                <span>Fusion</span>
+            </div>
+
         </div>
 
-        <nav class="header__menu">
-            <a href="">Home</a>
-            <a href="">Workouts</a>
-            <a href="">Diets</a>
-            <a href="">FAQ</a>
-        </nav>
+        <div class="container --header_menu">
 
-        <div class="header_right">
-            <button class="button --light singin">Sing in</button>
-            <button class="button --line reg">Register</button>
+            <nav class="header__menu">
+                <a href="">Home</a>
+                <a href="">Workouts</a>
+                <a href="">Diets</a>
+                <a href="">FAQ</a>
+            </nav>
+
+        </div>
+
+        <div class="container --button_header">
+
+            <div class="header_right">
+                <button class="button --light singin">Sing in</button>
+                <button class="button --line reg">Register</button>
+            </div>
+
         </div>
 
     </header>
 
     <main class="main">
 
-        <div class="main__left">
-            <h3 class="title">A New Era of
-                <br />
-                Fitness Standards
-            </h3>
+        <div class="container --main_textblock">
 
-            <p class="text">
-                Conventional diets don’t work. Discover
-                <br />
-                the FitFusion methodology to fat loss.
-            </p>
+            <div class="main__left">
+                <h3 class="title">A New Era of
+                    <br />
+                    Fitness Standards
+                </h3>
 
-            <div class="buttons">
-                <button class="button">Lose Fat</button>
-                <button class="button --line howit">How it works</button>
+                <p class="text">
+                    Conventional diets don’t work. Discover
+                    <br />
+                    the FitFusion methodology to fat loss.
+                </p>
+
+                <div class="buttons">
+                    <button class="button">Lose Fat</button>
+                    <button class="button --line howit">How it works</button>
+                </div>
             </div>
         </div>
 
