--- a/index.html
+++ b/index.html
@@ -8,54 +8,9 @@
 </head>
 
 <body>
-    <header class="header">
-
-            <div class="logo">
-                <span>Fit</span>
-                <span>Fusion</span>
-            </div>
-
-            <nav class="header__menu">
-                <a href="">Home</a>
-                <a href="">Workouts</a>
-                <a href="">Diets</a>
-                <a href="">FAQ</a>
-            </nav>
-
-
-            <div class="header_right">
-                <button class="button --light singin">Sing in</button>
-                <button class="button --line reg">Register</button>
-            </div>
-
-    </header>
-
-    <main class="main">
-
-        <div class="main__left">
-            <h3 class="title">A New Era of
-                <br />
-                Fitness Standards
-            </h3>
-
-            <p class="text">
-                Conventional diets don’t work. Discover
-                <br />
-                the FitFusion methodology to fat loss.
-            </p>
-
-            <div class="buttons">
-                <button class="button">Lose Fat</button>
-                <button class="button --line howit">How it works</button>
-            </div>
-        </div>
-
-        <aside class="aside">
-            <img src="images/futfusion.png">
-        </aside>
-
-    </main>
-
+    <picture class="container-logo">
+        <img src="images/justtwic.jpg" alt="" class="logo">
+    </picture>
 </body>
 
 </html>
