--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-
+        <div class="container">
             <div class="logo">
                 <span>Fit</span>
                 <span>Fusion</span>
@@ -27,35 +27,36 @@
                 <button class="button --light singin">Sing in</button>
                 <button class="button --line reg">Register</button>
             </div>
+        </div>
 
     </header>
 
     <main class="main">
+        <div class="container">
+            <div class="main__left">
+                <h3 class="title">A New Era of
+                    <br />
+                    Fitness Standards
+                </h3>
 
-        <div class="main__left">
-            <h3 class="title">A New Era of
-                <br />
-                Fitness Standards
-            </h3>
+                <p class="text">
+                    Conventional diets don’t work. Discover
+                    <br />
+                    the FitFusion methodology to fat loss.
+                </p>
 
-            <p class="text">
-                Conventional diets don’t work. Discover
-                <br />
-                the FitFusion methodology to fat loss.
-            </p>
-
-            <div class="buttons">
-                <button class="button">Lose Fat</button>
-                <button class="button --line howit">How it works</button>
+                <div class="buttons">
+                    <button class="button losefat">Lose Fat</button>
+                    <button class="button --line howit">How it works</button>
+                </div>
             </div>
+
+            <aside class="aside">
+                <img src="images/futfusion.png">
+            </aside>
         </div>
 
-        <aside class="aside">
-            <img src="images/futfusion.png">
-        </aside>
-
     </main>
-
 </body>
 
 </html>
