--- a/index.html
+++ b/index.html
@@ -4,59 +4,17 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <title>Marky | FutFusion</title>
+    <title>Marky tabs</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <span>Fit</span>
-                <span>Fusion</span>
-            </div>
-
-            <nav class="header__menu">
-                <a href="">Home</a>
-                <a href="">Workouts</a>
-                <a href="">Diets</a>
-                <a href="">FAQ</a>
-            </nav>
-
-
-            <div class="header_right">
-                <button class="button --light singin">Sing in</button>
-                <button class="button --line reg">Register</button>
-            </div>
-        </div>
-
-    </header>
-
-    <main class="main">
-        <div class="container">
-            <div class="main__left">
-                <h3 class="title">A New Era of
-                    <br />
-                    Fitness Standards
-                </h3>
-
-                <p class="text">
-                    Conventional diets don’t work. Discover
-                    <br />
-                    the FitFusion methodology to fat loss.
-                </p>
-
-                <div class="buttons">
-                    <button class="button losefat">Lose Fat</button>
-                    <button class="button --line howit">How it works</button>
-                </div>
-            </div>
-
-            <aside class="aside">
-                <img src="images/futfusion.png">
-            </aside>
-        </div>
-
-    </main>
+      <section class="tabs">
+        <label class="tab">
+            <input type="radio" name="tabs" hidden class="tab-actor" />
+            Tab label
+        </label>
+        <article class="tab-panel">Tab Content</article>
+      </section> 
 </body>
 
 </html>
