--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/tabs.css">
     <title>Marky tabs</title>
 </head>
 
@@ -14,6 +15,26 @@
             Tab label
         </label>
         <article class="tab-panel">Tab Content</article>
+      </section> 
+
+      <!-- --------- 2 ------- -->
+
+      <section class="tabs">
+        <label class="tab">
+            <input type="radio" name="tabs" hidden class="tab-actor" />
+            Tab label 2
+        </label>
+        <article class="tab-panel">Tab Content 2</article>
+      </section> 
+
+      <!-- --------- 3 ------- -->
+
+      <section class="tabs">
+        <label class="tab">
+            <input type="radio" name="tabs" hidden class="tab-actor" />
+            Tab label 3
+        </label>
+        <article class="tab-panel">Tab Content 3</article>
       </section> 
 </body>
 
