--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             </div>
 
             <div id="tab_02" class="cont_keyboard tab-keyboard">
-                  <div class="key-strand strand2">
-                        <div class="keyboard stylle2">
+                  <div class="key-strand style-rgb">
+                        <div class="keyboard">
                               <div class="company">Marky 2.0</div>
-                              <div class="keyboard-row small style2">
+                              <div class="keyboard-row small">
                                     <button class="keyboard-key">esc</button>
                                     <button class="keyboard-key">f1</button>
                                     <button class="keyboard-key">f2</button>
@@ -141,7 +141,7 @@
                                     <button class="keyboard-key">del</button>
                               </div>
 
-                              <div class="keyboard-row style2">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key">`</button>
                                     <button class="keyboard-key">1</button>
                                     <button class="keyboard-key">2</button>
@@ -158,7 +158,7 @@
                                     <button class="keyboard-key">⇐</button>
                               </div>
 
-                              <div class="keyboard-row style2">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key tab">Tab</button>
                                     <button class="keyboard-key" data-key-b="Q" data-key-a="й"></button>
                                     <button class="keyboard-key" data-key-b="W" data-key-a="ц"></button>
@@ -175,7 +175,7 @@
                                     <button class="keyboard-key">\</button>
                               </div>
 
-                              <div class="keyboard-row style2">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key caps">caps</button>
                                     <button class="keyboard-key" data-key-b="A" data-key-a="ф"></button>
                                     <button class="keyboard-key" data-key-b="S" data-key-a="ы"></button>
@@ -191,7 +191,7 @@
                                     <button class="keyboard-key enter">Enter</button>
                               </div>
 
-                              <div class="keyboard-row style2">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key shift">shift</button>
                                     <button class="keyboard-key" data-key-b="Z" data-key-a="я"></button>
                                     <button class="keyboard-key" data-key-b="X" data-key-a="ч"></button>
@@ -206,7 +206,7 @@
                                     <button class="keyboard-key shift">shift</button>
                               </div>
 
-                              <div class="keyboard-row style2">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key">ctrl</button>
                                     <button class="keyboard-key">win</button>
                                     <button class="keyboard-key">alt</button>
@@ -216,7 +216,7 @@
                                     <button class="keyboard-key">Ξ</button>
                                     <button class="keyboard-key">ctrl</button>
 
-                                    <div class="keyboard-arrows style2">
+                                    <div class="keyboard-arrows">
                                           <button class="keyboard-key left"><span>▲</span></button>
                                           <button class="keyboard-key up"><span>▲</span></button>
                                           <button class="keyboard-key down"><span>▼</span></button>
@@ -228,10 +228,10 @@
             </div>
 
             <div id="tab_03" class="cont_keyboard tab-keyboard">
-                  <div class="key-strand strand3">
-                        <div class="keyboard stylle2">
-                              <div class="company">Marky 2.0</div>
-                              <div class="keyboard-row small style3">
+                  <div class="key-strand style-blackish">
+                        <div class="keyboard">
+                              <div class="company">Marky 3.0</div>
+                              <div class="keyboard-row small">
                                     <button class="keyboard-key">esc</button>
                                     <button class="keyboard-key">f1</button>
                                     <button class="keyboard-key">f2</button>
@@ -248,7 +248,7 @@
                                     <button class="keyboard-key">del</button>
                               </div>
 
-                              <div class="keyboard-row style3">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key">`</button>
                                     <button class="keyboard-key">1</button>
                                     <button class="keyboard-key">2</button>
@@ -265,7 +265,7 @@
                                     <button class="keyboard-key">⇐</button>
                               </div>
 
-                              <div class="keyboard-row style3">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key tab">Tab</button>
                                     <button class="keyboard-key" data-key-b="Q" data-key-a="й"></button>
                                     <button class="keyboard-key" data-key-b="W" data-key-a="ц"></button>
@@ -282,7 +282,7 @@
                                     <button class="keyboard-key">\</button>
                               </div>
 
-                              <div class="keyboard-row style3">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key caps">caps</button>
                                     <button class="keyboard-key" data-key-b="A" data-key-a="ф"></button>
                                     <button class="keyboard-key" data-key-b="S" data-key-a="ы"></button>
@@ -298,7 +298,7 @@
                                     <button class="keyboard-key enter">Enter</button>
                               </div>
 
-                              <div class="keyboard-row style3">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key shift">shift</button>
                                     <button class="keyboard-key" data-key-b="Z" data-key-a="я"></button>
                                     <button class="keyboard-key" data-key-b="X" data-key-a="ч"></button>
@@ -309,11 +309,11 @@
                                     <button class="keyboard-key" data-key-b="M" data-key-a="ь"></button>
                                     <button class="keyboard-key">,</button>
                                     <button class="keyboard-key">.</button>
-                                    <button class="keyboard-key">/</button>`
+                                    <button class="keyboard-key">/</button>
                                     <button class="keyboard-key shift">shift</button>
                               </div>
 
-                              <div class="keyboard-row style3">
+                              <div class="keyboard-row">
                                     <button class="keyboard-key">ctrl</button>
                                     <button class="keyboard-key">win</button>
                                     <button class="keyboard-key">alt</button>
@@ -323,7 +323,7 @@
                                     <button class="keyboard-key">Ξ</button>
                                     <button class="keyboard-key">ctrl</button>
 
-                                    <div class="keyboard-arrows style3">
+                                    <div class="keyboard-arrows">
                                           <button class="keyboard-key left"><span>▲</span></button>
                                           <button class="keyboard-key up"><span>▲</span></button>
                                           <button class="keyboard-key down"><span>▼</span></button>
