--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                   <div class="tab-panel">
                         <div class="key-strand tab-keyboard">
                               <div class="keyboard">
-                                    <div class="company ">KeyBoards Marky</div>
+                                    <!-- <div class="company ">KeyBoards Marky</div> -->
+                                    <div class="keboaard" data-keyboard-name="KeyBoard Marky"></div>
                                     <div class="keyboard-row small">
                                           <button class="keyboard-key">esc</button>
                                           <button class="keyboard-key">f1</button>
@@ -62,7 +63,7 @@
                                     </div>
 
                                     <div class="keyboard-row">
-                                          <button class="keyboard-key tab">Tab</button>
+                                          <button class="keyboard-key tabchik">Tab</button>
                                           <button class="keyboard-key" data-key-b="Q" data-key-a="й"></button>
                                           <button class="keyboard-key" data-key-b="W" data-key-a="ц"></button>
                                           <button class="keyboard-key" data-key-b="E" data-key-a="у"></button>
