--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
 
             <form action="#" class="header__searchbox">
+                <button class="search"><i class='bx bx-search'></i></button>
                 <input type="text" class="search-input" placeholder="Search here...">
                 <div class="user-avatar"></div>
             </form>
@@ -71,7 +72,7 @@
                     <div class="activity">
                         <div class="section-caption"><i class='bx bx-calendar-alt'></i>Recent Activity</div>
                         <div class="table">
-                            <table>
+                            <table class='table__activity'>
                                 <thead>
                                     <tr>
                                         <td>Name</td>
