--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="wrapper">
+    <div class="wrapper" hidden>
         <form action="">
             <h1>Login</h1>
             <div class="input-box">
@@ -33,6 +33,25 @@
 
             <div class="register-link">
                 <p>Don`t have an account? <a href="#">Register</a></p>
+            </div>
+        </form>
+    </div>
+
+    <div class="wrapper" hidden>
+        <form action="">
+            <h1>Forgot your password?</h1>
+            <p class="wrapper-text">Enter your email and we`ll<br>
+                help you reset password
+            </p>
+            <div class="input-box">
+                <input type="email" placeholder="email" required>
+                <i class='bx bx-info-circle'></i>
+            </div>
+
+            <button type="submit" class="btn">Reset password</button>
+
+            <div class="register-link">
+                <p><a href="#">Sign in</a></p>
             </div>
         </form>
     </div>
