--- a/about.html
+++ b/about.html
@@ -4,8 +4,6 @@
 
 <head>
 
-    <meta name="view-transition">
-
     <title>Marky | Mef</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -16,11 +14,11 @@
     
     <nav>
         <ul class="nav-list">
-            <li class="active">
-                <a href="index.html" aria-current="page">home</a>
-            </li>
             <li>
-                <a href="about.html">About</a>
+                <a href="index.html">home</a>
+            </li>
+            <li class="active">
+                <a href="about.html" aria-current="page">About</a>
             </li>
             <li>
                 <a href="blog.html">Blog</a>
@@ -32,7 +30,7 @@
     </nav>
 
     <main>
-        <h1>Home</h1>
+        <h1>About</h1>
     </main>
 
 </body>
