--- a/index.html
+++ b/index.html
@@ -3,37 +3,30 @@
 <html>
 
 <head>
-
-    <meta name="view-transition">
-
-    <title>Marky | Mef</title>
+    <title>Marky</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 
 <body>
-    
-    <nav>
-        <ul class="nav-list">
-            <li class="active">
-                <a href="index.html" aria-current="page">home</a>
-            </li>
-            <li>
-                <a href="about.html">About</a>
-            </li>
-            <li>
-                <a href="blog.html">Blog</a>
-            </li>
-            <li><a href="#">Another</a></li>
-            <li><a href="#">Page</a></li>
-            <li><a href="#">And anothe</a></li>
-        </ul>
-    </nav>
 
-    <main>
-        <h1>Home</h1>
-    </main>
+    <section>
+        <h1>Our team</h1>
+
+        <div class="avatars">
+            <img src="image/image1.jpg" alt="" class="avatar">
+            <img src="image/image2.jpg" alt="" class="avatar">
+            <img src="image/image3.jpg" alt="" class="avatar">
+            <img src="image/image4.jpg" alt="" class="avatar">
+            <img src="image/image5.jpg" alt="" class="avatar">
+            <img src="image/image1.jpg" alt="" class="avatar">
+            <img src="image/image2.jpg" alt="" class="avatar">
+            <img src="image/image3.jpg" alt="" class="avatar">
+            <img src="image/image4.jpg" alt="" class="avatar">
+            <img src="image/image5.jpg" alt="" class="avatar">
+        </div>
+    </section>
 
 </body>
 
