--- a/index.html
+++ b/index.html
@@ -11,21 +11,35 @@
 
 <body>
 
-    <section>
-        <h1>Our team</h1>
+    <nav>
+        <ul class="nav-list">
+            <li class="active">
+                <a href="index.html" aria-current="page">home</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="blog.html">Blog</a>
+            </li>
+            <li><a href="#">Another</a></li>
+            <li><a href="#">Page</a></li>
+            <li><a href="#">And anothe</a></li>
+        </ul>
+    </nav>
 
-        <div class="avatars">
-            <img src="image/image1.jpg" alt="" class="avatar">
-            <img src="image/image2.jpg" alt="" class="avatar">
-            <img src="image/image3.jpg" alt="" class="avatar">
-            <img src="image/image4.jpg" alt="" class="avatar">
-            <img src="image/image5.jpg" alt="" class="avatar">
-            <img src="image/image1.jpg" alt="" class="avatar">
-            <img src="image/image2.jpg" alt="" class="avatar">
-            <img src="image/image3.jpg" alt="" class="avatar">
-            <img src="image/image4.jpg" alt="" class="avatar">
-            <img src="image/image5.jpg" alt="" class="avatar">
-        </div>
+    <section>
+        <div class="pictures">
+            <img src="image/image1.jpg" alt="" class="picture">
+            <img src="image/image2.jpg" alt="" class="picture">
+            <img src="image/image3.jpg" alt="" class="picture">
+            <img src="image/image4.jpg" alt="" class="picture">
+            <img src="image/image5.jpg" alt="" class="picture">
+            <img src="image/image1.jpg" alt="" class="picture">
+            <img src="image/image2.jpg" alt="" class="picture">
+            <img src="image/image3.jpg" alt="" class="picture">
+            <img src="image/image4.jpg" alt="" class="picture">
+            <img src="image/image5.jpg" alt="" class="picture">
     </section>
 
 </body>
