--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@
     </nav>
 
     <main>
-        <h1>About</h1>
+        <input type="checkbox" id="check" class="toggle">
+        <label for="check">Checked?</label>
     </main>
 
 </body>
