--- a/about.html
+++ b/about.html
@@ -6,12 +6,15 @@
 
     <title>Marky | Mef</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/switchers.css">
+
+    <meta name="view-transition" content="same-origin" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 
 <body>
-    
+
     <nav>
         <ul class="nav-list">
             <li>
@@ -32,8 +35,30 @@
     <main>
         <input type="checkbox" id="check" class="toggle">
         <label for="check">Checked?</label>
+
+        <section>
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+            <ul class="list-link">
+                <li class="li__list-link">
+                    <a href=""><i class='bx bxl-facebook'></i></a>
+                </li>
+                <li class="li__list-link">
+                    <a href=""><i class='bx bxl-twitch'></i></a>
+                </li>
+                <li class="li__list-link">
+                    <a href=""><i class='bx bxl-youtube'></i></a>
+                </li>
+                <li class="li__list-link">
+                    <a href=""><i class='bx bxl-instagram'></i></a>
+                </li>
+                <li class="li__list-link">
+                    <a href=""><i class='bx bxl-github'></i></i></a>
+                </li>
+            </ul>
+        </section>
     </main>
 
-</body>
-
+</body>                                                                       
 </html>
