--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
 <head>
 
     <title>Marky | Mef</title>
+    <meta name="view-transition" content="same-origin" />
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
