--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+    <meta name="view-transition" content="same-origin" />
+
     <title>Marky</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -28,19 +30,38 @@
         </ul>
     </nav>
 
-    <section>
-        <div class="pictures">
-            <img src="image/image1.jpg" alt="" class="picture">
-            <img src="image/image2.jpg" alt="" class="picture">
-            <img src="image/image3.jpg" alt="" class="picture">
-            <img src="image/image4.jpg" alt="" class="picture">
-            <img src="image/image5.jpg" alt="" class="picture">
-            <img src="image/image1.jpg" alt="" class="picture">
-            <img src="image/image2.jpg" alt="" class="picture">
-            <img src="image/image3.jpg" alt="" class="picture">
-            <img src="image/image4.jpg" alt="" class="picture">
-            <img src="image/image5.jpg" alt="" class="picture">
-    </section>
+        <div class="avatars">
+            <picture class="avatars__image">
+                <img src="image/image1.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image2.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image3.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image4.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image5.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image1.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image2.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image3.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image4.jpg" alt="" class="avatar">
+            </picture>
+            <picture class="avatars__image">
+                <img src="image/image5.jpg" alt="" class="avatar">
+            </picture>
+        </div>
 
 </body>
 
