--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <title>Marky | Mef</title>
     <meta name="view-transition" content="same-origin" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/blog.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -31,7 +32,11 @@
     </nav>
 
     <main>
-        <h1>Blog</h1>
+        <div class="container">
+            <div class="btn"><a href="">Read More</a></div>
+            <div class="btn"><a href="">Social</a></div>
+            <div class="btn"><a href="">Privacy</a></div>
+        </div>
     </main>
 
 </body>
